Add safe offline rule fallback